<resources>
    <string name="g_ok">OK</string>
    <string name="g_cancel">Cancel</string>
    <string name="g_loading">Loading, please wait.</string>
    <string name="g_close">Close</string>
    <string name="g_done">Done</string>
    <string name="g_confirm">Confirm</string>
    <string name="g_a_exit">Are you sure you want to leave?</string>
    <string name="g_a_network_error">Network connection failed, please try again</string>
    <string name="g_a_network_timeout_error">Connection has expired, please try again</string>
    <string name="g_e_emptyform">Please enter</string>
    <string name="g_copy">Copy</string>
    <string name="g_edit">Edit</string>
    <string name="g_next">Next</string>
    <string name="g_delete">Delete</string>
    <string name="g_select_photo">Select photo</string>
    <string name="g_previous">Previous</string>
    <string name="g_skip">skip</string>
    <string name="g_add">Add</string>
    <string name="g_search">Search</string>
    <string name="g_manage">Manage</string>
    <string name="g_save">Save</string>
    <string name="g_scan">Scan</string>
    <string name="g_share">Share</string>
    <string name="error_empty_data">Data not found</string>
    <string name="tab_wallet">Wallet</string>
    <string name="tab_trade">Trade</string>
    <string name="tab_mine">Me</string>
    <string name="login_title">Create your first digital identity\nEasily manage multi-chain wallets</string>
    <string name="login_create">Sign Up</string>
    <string name="login_desc">An e-wallet will automatically be created once you set up a new account</string>
    <string name="login_restore">Log In</string>
    <string name="login_or">Or</string>
    <string name="create_id_title">Create identity</string>
    <string name="create_id_create">Create</string>
    <string name="create_id_name">Identity name</string>
    <string name="create_id_password">Password</string>
    <string name="create_id_confirm_password">Re-enter password</string>
    <string name="create_id_password_note">Password reminder message</string>
    <string name="g_camera_permission_request">To enable QR code scanning, please enable access to camera</string>
    <string name="g_pick_photo_permission_request">To enabled access to the album， please enable access to file</string>
    <string name="miner_fee_setting">Miner fee setting</string>
    <string name="miner_fee_input_p">Please enter miner fee</string>
    <string name="payment_detail">Payment details</string>
    <string name="payment_detail_title">Payment information</string>
    <string name="receipt_address">Receipt address</string>
    <string name="payment_address">Payment address</string>
    <string name="chose_payment_address">Choose Payment address</string>
    <string name="miner_fee">Miner fee</string>
    <string name="amount_transfer">Change to</string>
    <string name="price">Price</string>
    <string name="transaction_account">Transfer</string>
    <string name="fill_in_address_p">Please enter address</string>
    <string name="choose_asset_type">Select asset type</string>
    <string name="choose_wallet">Select wallet type</string>
    <string name="fill_in_amount">Enter amount</string>
    <string name="common_address">Addresses</string>
    <string name="hint_fill_in_valid_bth_address">Enter a valid bitcoin address</string>
    <string name="hint_fill_in_valid_eth_address">Enter a valid eth address or ens domain(end in .eth)</string>
    <string name="error_pwd_rule">Please make sure your password is at least 8 characters long. Do not use any symbols</string>
    <string name="error_pwd_not_equal">Two password entries do not match</string>
    <string name="fail_create">Creation failed</string>
    <string name="error_mnemonic_position">Incorrect mnemonic order</string>
    <string name="create_contact_person">Add contact</string>
    <string name="delete_contact_person">Delete contact</string>
    <string name="name">Name</string>
    <string name="note_option">Note (optional)</string>
    <string name="error_choose_address_type_p">Please reselect address type</string>
    <string name="note">Note</string>
    <string name="address">Address</string>
    <string name="my_identity">My identity</string>
    <string name="name_2">Name</string>
    <string name="my_identity_id">Identity ID</string>
    <string name="back_identity">Backup identity</string>
    <string name="logout_now_identity">Exit current identity</string>
    <string name="logout_now_identity_message">Removing identity and all imported wallets, please make sure all wallets are backed up</string>
    <string name="change_identity_name">Change identity name</string>
    <string name="fill_in_change_nick_name_p">Please enter the name you want to replace</string>
    <string name="fill_in_name_p">Please enter identity name</string>
    <string name="fill_in_pwd_p">Please enter password</string>
    <string name="back_up_warning_message">Warning: If you do not properly back up, you will not be able to retrieve your wallet after deleting. Please handle this operation carefully.</string>
    <string name="language">Language</string>
    <string name="currency_unit">Currency unit</string>
    <string name="setting_use">User settings</string>
    <string name="qa">QA</string>
    <string name="privacy_mode">Privacy mode</string>
    <string name="hint_privacy_message">The wallet’s assets and amount will be hidden when privacy mode is turned on.</string>
    <string name="check_version_update">Check for version updates</string>
    <string name="choose_receipt_address">Choose payment address</string>
    <string name="setting_pwd">Set password</string>
    <string name="setting_identity_name_and_pwd">Set identity name and password</string>
    <string name="input_identity_name">Please enter identity name</string>
    <string name="wallet_pwd">Wallet password</string>
    <string name="fill_in_pwd_confirm">Re-enter password</string>
    <string name="pwd_hint_message">Password Reminder</string>
    <string name="start_import">Start importing</string>
    <string name="restore_identity">Restore identity</string>
    <string name="import_etherum_wallet">Import ETHERUM wallet</string>
    <string name="import_bitcoin_wallet">Import BITCOIN wallet</string>
    <string name="import_cic_wallet">Import CIC wallet</string>
    <string name="import_guc_wallet">Import GUC wallet</string>
    <string name="import_uncompress_btc_address_wallet">Import uncompressed BTC address wallet</string>
    <string name="import_specific_btc_address_wallet">Import specific BTC address wallet</string>
    <string name="fail_import">Import failed</string>
    <string name="failed_create">Create failed</string>
    <string name="error_wallet_exist_already">Wallet already exists</string>
    <string name="fail_restore_identity">Restore identity fail</string>
    <string name="desc_mnemonic">The wallet password can be modified while the mnemonic is being imported.</string>
    <string name="hint_fill_in_mnemonic">Enter mnemonics, separated by spaces</string>
    <string name="desc_private_key">Copy and paste the contents of the PrivateKey file into the input box. Or enter the QR code generated by scanning the Private Key content.</string>
    <string name="hint_fill_in_private_key">Enter the plaintext private key</string>
    <string name="choose_import_wallet_type">Select wallet type</string>
    <string name="eth_wallet">ETH wallet</string>
    <string name="btc_wallet">BTC wallet</string>
    <string name="cic_wallet">CIC wallet</string>
    <string name="guc_wallet">GUC wallet</string>
    <string name="thunder_exchange">Lightning transfer</string>
    <string name="fail_amount_not_enough">insufficient balance</string>
    <string name="transaction_record">Transfer history</string>
    <string name="outcome">Withdrawal</string>
    <string name="income">Deposit</string>
    <string name="fail">Fail</string>
    <string name="offline_save">Save offline</string>
    <string name="offline_save_message">Don\'t save to email, notepad, web, chat, etc., it\'s very dangerous</string>
    <string name="dont_trans_by_internet">Please do not transmit with the internet</string>
    <string name="dont_trans_by_internet_message">Please do not transmit with the internet, once acquired by a hacker, it will cause irreparable loss of assets. It is recommended to transmit with offline devices by scanning QR code.</string>
    <string name="pwd_manage_tool_save">Password management tool save</string>
    <string name="pwd_manage_tool_save_message">It is recommended to manage with the password management tool</string>
    <string name="provide_scan_directly_only">Direct scanning only</string>
    <string name="provide_scan_directly_only_message">The QR code is forbidden to save, take screenshots or photos. It is only for users to scan directly in a secure environment to easily import the wallet</string>
    <string name="use_in_save_environment">Use in a safe environment</string>
    <string name="use_in_save_environment_message">Please make sure there is no one or no camera around before use. Once the QR code is acquired by others, it will cause irreparable loss of assets.</string>
    <string name="changing_pwd_hint">Replace password hint</string>
    <string name="fill_in_change_pwd_hint_p">Please enter the password hint you want to replace</string>
    <string name="fill_in_pwd_hint_p">Please enter password hint</string>
    <string name="g_clear">Clear</string>
    <string name="update_succeed">Update success</string>
    <string name="pwd">Password</string>
    <string name="pwd_confirm">Confirm Password</string>
    <string name="agree_privacy_policy">I agree《InfiniteChain Privacy Policy》</string>
    <string name="dialog_request_coin_success_title">Send payment request</string>
    <string name="dialog_request_coin_success_message">Payment can be transferred directly to you within the time limit.</string>
    <string name="dialog_request_coin_success_button">Confirm</string>
    <string name="operation_comm_address_name">Name</string>
    <string name="operation_comm_address_name_hint">Please name this wallet</string>
    <string name="operation_comm_address_address">Address</string>
    <string name="operation_comm_address_address_hint">Please enter the address or use the action bar code to scan the address</string>
    <string name="operation_comm_address_note">Note (optional)</string>
    <string name="operation_comm_address_note_hint">Please enter a comment within twenty characters </string>
    <string name="enter_password_top_message">Please enter your account password</string>
    <string name="enter_password_password">Password</string>
    <string name="enter_password_password_hint">Please enter your wallet password</string>
    <string name="enter_password_password_tip">Password prompt message</string>
    <string name="restore_with_user_info_nick_name">Nickname</string>
    <string name="restore_with_user_info_nick_name_hint">This nickname refers to you in the chat system. Do not use indecent text</string>
    <string name="restore_with_user_info_nick_password">Password</string>
    <string name="restore_with_user_info_nick_confirm_password">Confirm Password</string>
    <string name="restore_with_user_info_nick_confirm_password_hint">Re-enter password</string>
    <string name="restore_with_user_info_nick_hint_password">Password Reminder</string>
    <string name="restore_with_user_info_nick_hint_password_hint">Password reminder message</string>
    <string name="restore_with_user_info_nick_policy">I agree with the InfiniteChain Privacy Policy</string>
    <string name="wallet_setting_change_wallet_name">Change wallet name</string>
    <string name="wallet_setting_wallet_password_hint">Wallet password hint</string>
    <string name="wallet_setting_export_wallet">Export Wallet</string>
    <string name="wallet_setting_delete_wallet">Delete Wallet</string>
</resources>