<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:text="@string/enter_password_top_message"
                android:textColor="@color/_354252"
                android:textSize="16sp" />

            <com.ttchain.walletproject.view.CustomEditTextItem
                android:id="@+id/customEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_24"
                app:editTextHint="@string/enter_password_password_hint"
                app:editTextType="password"
                app:titleText="@string/enter_password_password" />

            <com.ttchain.walletproject.view.CustomEditTextItem
                android:id="@+id/customEditTextHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:editTextHint="@string/create_id_confirm_password"
                app:editTextType="password"
                app:titleText="@string/enter_password_password_tip" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_16">

        <com.ttchain.walletproject.view.NextButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_24"
            android:layout_marginBottom="@dimen/padding_16"
            app:button_enable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.ttchain.walletproject.view.PreviousButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_24"
            android:layout_marginBottom="@dimen/padding_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:previous_button_text="@string/g_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

